--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -39,6 +39,17 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="lastName" type="text" />
+                <div
+                  *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
+                  class="alert alert-danger"
+                >
+                  <div *ngIf="lastName.errors.required">
+                    Last Name is required
+                  </div>
+                  <div *ngIf="lastName.errors.minLength">
+                    Last Name must be at least 16 characters long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -49,6 +60,17 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="email" type="text" />
+                <div
+                  *ngIf="email.invalid && (email.dirty || email.touched)"
+                  class="alert alert-danger"
+                >
+                  <div *ngIf="email.errors.required">
+                    Email is required
+                  </div>
+                  <div *ngIf="email.errors.pattern">
+                   Invalid Email
+                  </div>
+                </div>
               </div>
             </div>
           </div>
