--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -20,7 +20,7 @@
                 <!-- Validation: invalid, did the user change it, did the field lose focus -->
                 <div
                   *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
-                  class="alert alert-danger"
+                  class="alert alert-danger mt-1"
                 >
                   <div *ngIf="firstName.errors.required">
                     First Name is required
@@ -41,7 +41,7 @@
                 <input formControlName="lastName" type="text" />
                 <div
                   *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
-                  class="alert alert-danger"
+                  class="alert alert-danger mt-1"
                 >
                   <div *ngIf="lastName.errors.required">
                     Last Name is required
@@ -62,7 +62,7 @@
                 <input formControlName="email" type="text" />
                 <div
                   *ngIf="email.invalid && (email.dirty || email.touched)"
-                  class="alert alert-danger"
+                  class="alert alert-danger mt-1"
                 >
                   <div *ngIf="email.errors.required">
                     Email is required
